--- a/app/src/main/res/layout/fragment_covid_data_group.xml
+++ b/app/src/main/res/layout/fragment_covid_data_group.xml
@@ -23,31 +23,35 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:weightSum="1"
                 android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginRight="2dp"
                     android:layout_weight="0.25"
                     android:background="@drawable/layerlistred"
                     android:gravity="center"
+                    android:weightSum="1"
                     android:orientation="vertical"
                     android:padding="5dp">
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:text="Confirmed"
+                        android:layout_weight="0.5"
                         android:textColor="@color/textColorStat" />
 
                     <TextView
                         android:id="@+id/confirmed"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.5"
                         android:layout_marginTop="5dp"
-                        android:text="0"
+                        android:text="3690"
                         android:textColor="@color/textColorStat"
                         android:textSize="20dp"
                         android:textStyle="bold" />
@@ -56,26 +60,29 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="2dp"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
                     android:layout_weight="0.25"
                     android:background="@drawable/layerlistblue"
                     android:gravity="center"
                     android:orientation="vertical"
+                    android:weightSum="1"
                     android:padding="5dp">
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.5"
                         android:text="Active"
                         android:textColor="#328CFF" />
 
                     <TextView
                         android:id="@+id/active"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.5"
                         android:layout_marginTop="5dp"
-                        android:text="0"
+                        android:text="3122"
                         android:textColor="#328CFF"
                         android:textSize="20dp"
                         android:textStyle="bold" />
@@ -85,25 +92,28 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="2dp"
                     android:layout_weight="0.25"
                     android:background="@drawable/layerlistgreen"
                     android:gravity="center"
                     android:orientation="vertical"
+                    android:weightSum="1"
                     android:padding="5dp">
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.5"
                         android:text="Recovered"
                         android:textColor="#2AA746" />
 
                     <TextView
                         android:id="@+id/recovered"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.5"
                         android:layout_marginTop="5dp"
-                        android:text="0"
+                        android:text="304"
                         android:textColor="#2AA746"
                         android:textSize="20dp"
                         android:textStyle="bold" />
@@ -113,30 +123,31 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
                     android:layout_weight="0.25"
                     android:background="@drawable/layerlistgrey"
                     android:gravity="center"
                     android:orientation="vertical"
+                    android:weightSum="1"
                     android:padding="5dp">
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.5"
                         android:text="Deceased"
                         android:textColor="#6D767D" />
 
                     <TextView
                         android:id="@+id/decreased"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.5"
                         android:layout_marginTop="5dp"
-                        android:text="0"
+                        android:text="107"
                         android:textColor="#6D767D"
                         android:textSize="20dp"
                         android:textStyle="bold" />
                 </LinearLayout>
-
 
             </LinearLayout>
 
